# mediateka

./: .gitignore  Cargo.toml  Makefile  README.md  diesel.toml
migrations/2025-03-01-223910_create_music/: down.sql  up.sql
migrations/2025-03-01-224405_create_video/: down.sql  up.sql
migrations/2025-03-01-224417_create_image/: up.sql
src/: app.rs  main.rs  tools.rs  ui.rs
src/tools/: fs.rs  i18n.rs
src/tools/base_functions/: item_manager.rs
src/tools/db/: models.rs  run.rs  schema.rs
src/tools/enums/: table.rs
src/tools/i18n/: en.rs
src/ui/base/: get_path_button.rs
src/ui/base/buttons/: folder_add_button.rs
src/ui/header/: about.rs  header.rs
src/ui/home/: home_content.rs
src/ui/home/tabs/image/: image_container.rs
src/ui/home/tabs/music/: container.rs  music_container.rs
src/ui/home/tabs/video/: video_container.rs
