[package]
name = "mediateka"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'

[dependencies]
gio = "0.20.9"
diesel = { version = "2.2.7", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }

[dependencies.adw]
package = "libadwaita"
version = "0.7.1"

[dependencies.gtk]
package = "gtk4"
version = "0.9.6"